[package]
name = "bred"
version = "0.1.2"
edition = "2021"
readme = "README.md"
exclude = [".vscode/*", "tests/*"]
homepage = "https://github.com/manorajesh/bred"
repository = "https://github.com/manorajesh/bred"
keywords = ["cli", "binary", "files", "reader"]
categories = ["command-line-utilities"]
description = "A simple binary file reader with coloring"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
