[package]
name = "bred"
version = "0.4.0"
edition = "2021"
readme = "README.md"
exclude = [".vscode/*", "tests/*"]
homepage = "https://github.com/manorajesh/bred"
repository = "https://github.com/manorajesh/bred"
keywords = ["cli", "binary", "hexdump", "fast", "reader"]
categories = ["command-line-utilities"]
description = "The fastest binary file reader with coloring"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true